Added checkbox filter form. Checkbox and button filter forms were combined.

--- a/src/containers/Sidebar/Sidebar.module.css
+++ b/src/containers/Sidebar/Sidebar.module.css
@@ -1,14 +1,14 @@
 .Sidebar {
-    width: 192px;
+    width: 232px;
     display: inline-block;
-    padding: 20px;
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    padding: 10px 0;
 }
 
-.Sidebar span {
-    line-height: 12px;
+.Title {
+    margin: 10px 20px;
     letter-spacing: 0.5px;
     text-transform: uppercase;
 }
