--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -6,9 +6,15 @@
     align-items: center;
     text-align: center;
     letter-spacing: 0.5px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 20px;
+    color: #4A4A4A;
     text-transform: uppercase;
     cursor: pointer;
     outline: none;
+    background-color: #FFFFFF;
+    border: 1px solid #DFE5EC;
 }
 
 .Left {
@@ -31,9 +37,4 @@
     background-color: #2196F3;
     color: #FFFFFF;
     border: 1px solid #2196F3;
-}
-
-.Inactive {
-    background-color: #FFFFFF;
-    border: 1px solid #DFE5EC;
 }
