Added ticket list, restructured components architecture.

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,6 +1,6 @@
 .Sidebar {
     width: 232px;
-    display: inline-block;
+    display: inline-table;
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
