--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,10 +1,9 @@
 .Modal {
     position: fixed;
-    z-index: 500;
-    background-color: white;
+    z-index: 200;
+    background-color: #FFFFFF;
     width: 70%;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px black;
+    border-radius: 5px;
     padding: 16px;
     left: 15%;
     top: 30%;
